phalcom-ast/tests/snapshots/integration__parser__for_loop_over_list.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"for x in xs { System.print(x) }\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        For(
            ForStatement {
                lanes: [
                    ForLane {
                        pattern: Name {
                            name: "x",
                            range: CopyRange {
                                start: 4,
                                end: 5,
                            },
                        },
                        index: None,
                        iter: Var {
                            value: "xs",
                            range: CopyRange {
                                start: 9,
                                end: 11,
                            },
                        },
                        range: CopyRange {
                            start: 4,
                            end: 11,
                        },
                    },
                ],
                body: [
                    Expr {
                        expr: MethodCall(
                            MethodCallExpr {
                                object: Var {
                                    value: "System",
                                    range: CopyRange {
                                        start: 14,
                                        end: 20,
                                    },
                                },
                                method: "print",
                                method_range: Some(
                                    CopyRange {
                                        start: 21,
                                        end: 26,
                                    },
                                ),
                                args: [
                                    Positional {
                                        expr: Var {
                                            value: "x",
                                            range: CopyRange {
                                                start: 27,
                                                end: 28,
                                            },
                                        },
                                        range: CopyRange {
                                            start: 27,
                                            end: 28,
                                        },
                                    },
                                ],
                                range: CopyRange {
                                    start: 14,
                                    end: 29,
                                },
                            },
                        ),
                        range: CopyRange {
                            start: 14,
                            end: 29,
                        },
                    },
                ],
                range: CopyRange {
                    start: 0,
                    end: 31,
                },
            },
        ),
    ],
}
