phalcom-ast/tests/snapshots/integration__parser__for_missing_in_is_error.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"for (x xs) { }\")"
---
Err: SyntaxError { kind: UnrecognizedToken { token: "xs", expected: ["\"in\""] }, range: 7..9 }
