phalcom-ast/tests/snapshots/integration__parser__let_binding.snap
---
source: phalcom-ast/tests/parser.rs
assertion_line: 77
expression: "parse(\"let x = 1 + 2\")"
---
Program {
    statements: [
        Let(
            LetBinding {
                kind: Let,
                pattern: Name {
                    name: "x",
                    range: CopyRange {
                        start: 4,
                        end: 5,
                    },
                },
                value: Some(
                    Binary(
                        BinaryExpr {
                            op: Add,
                            op_range: Some(
                                CopyRange {
                                    start: 10,
                                    end: 11,
                                },
                            ),
                            left: Int {
                                digits: "1",
                                radix: 10,
                                range: CopyRange {
                                    start: 8,
                                    end: 9,
                                },
                            },
                            right: Int {
                                digits: "2",
                                radix: 10,
                                range: CopyRange {
                                    start: 12,
                                    end: 13,
                                },
                            },
                            range: CopyRange {
                                start: 8,
                                end: 13,
                            },
                        },
                    ),
                ),
                range: CopyRange {
                    start: 0,
                    end: 13,
                },
            },
        ),
    ],
}
