phalcom-ast/tests/snapshots/integration__parser__member_access.snap
---
source: phalcom-ast/tests/parser.rs
assertion_line: 87
expression: "parse(\"x.y\")"
---
Program {
    statements: [
        Expr {
            expr: GetProperty(
                GetPropertyExpr {
                    object: Var {
                        value: "x",
                        range: CopyRange {
                            start: 0,
                            end: 1,
                        },
                    },
                    property: "y",
                    property_range: Some(
                        CopyRange {
                            start: 2,
                            end: 3,
                        },
                    ),
                    range: CopyRange {
                        start: 0,
                        end: 3,
                    },
                },
            ),
            range: CopyRange {
                start: 0,
                end: 3,
            },
        },
    ],
}
