phalcom-ast/tests/snapshots/integration__parser__multiple_attributes_attach_to_same_member_in_order.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"class Point {\\n  @requires(x > 0)\\n  @requires(x < 100)\\n  set(x) {\\n    self.x = x\\n  }\\n}\\n\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        Class(
            ClassDef {
                name: "Point",
                superclass: None,
                members: [
                    Method(
                        MethodDef {
                            name: "set",
                            params: [
                                ParameterDef {
                                    name: "x",
                                    name_range: CopyRange {
                                        start: 60,
                                        end: 61,
                                    },
                                    label: Some(
                                        "x",
                                    ),
                                    label_range: Some(
                                        CopyRange {
                                            start: 60,
                                            end: 61,
                                        },
                                    ),
                                    rest_mode: None,
                                    annotation: None,
                                    range: CopyRange {
                                        start: 60,
                                        end: 61,
                                    },
                                },
                            ],
                            return_annotation: None,
                            body: [
                                Expr {
                                    expr: SetProperty(
                                        SetPropertyExpr {
                                            object: SelfVar {
                                                range: CopyRange {
                                                    start: 69,
                                                    end: 73,
                                                },
                                            },
                                            property: "x",
                                            property_range: Some(
                                                CopyRange {
                                                    start: 74,
                                                    end: 75,
                                                },
                                            ),
                                            value: Var {
                                                value: "x",
                                                range: CopyRange {
                                                    start: 78,
                                                    end: 79,
                                                },
                                            },
                                            range: CopyRange {
                                                start: 69,
                                                end: 79,
                                            },
                                        },
                                    ),
                                    range: CopyRange {
                                        start: 69,
                                        end: 79,
                                    },
                                },
                            ],
                            is_static: false,
                            is_constructor: false,
                            attributes: [
                                Attribute {
                                    kind: Builtin(
                                        Requires,
                                    ),
                                    name: "requires",
                                    args: [
                                        Binary(
                                            BinaryExpr {
                                                op: GreaterThan,
                                                op_range: Some(
                                                    CopyRange {
                                                        start: 28,
                                                        end: 29,
                                                    },
                                                ),
                                                left: Var {
                                                    value: "x",
                                                    range: CopyRange {
                                                        start: 26,
                                                        end: 27,
                                                    },
                                                },
                                                right: Int {
                                                    digits: "0",
                                                    radix: 10,
                                                    range: CopyRange {
                                                        start: 30,
                                                        end: 31,
                                                    },
                                                },
                                                range: CopyRange {
                                                    start: 26,
                                                    end: 31,
                                                },
                                            },
                                        ),
                                    ],
                                    range: CopyRange {
                                        start: 16,
                                        end: 32,
                                    },
                                },
                                Attribute {
                                    kind: Builtin(
                                        Requires,
                                    ),
                                    name: "requires",
                                    args: [
                                        Binary(
                                            BinaryExpr {
                                                op: LessThan,
                                                op_range: Some(
                                                    CopyRange {
                                                        start: 47,
                                                        end: 48,
                                                    },
                                                ),
                                                left: Var {
                                                    value: "x",
                                                    range: CopyRange {
                                                        start: 45,
                                                        end: 46,
                                                    },
                                                },
                                                right: Int {
                                                    digits: "100",
                                                    radix: 10,
                                                    range: CopyRange {
                                                        start: 49,
                                                        end: 52,
                                                    },
                                                },
                                                range: CopyRange {
                                                    start: 45,
                                                    end: 52,
                                                },
                                            },
                                        ),
                                    ],
                                    range: CopyRange {
                                        start: 35,
                                        end: 53,
                                    },
                                },
                            ],
                            range: CopyRange {
                                start: 56,
                                end: 83,
                            },
                            name_range: CopyRange {
                                start: 56,
                                end: 59,
                            },
                        },
                    ),
                ],
                attributes: [],
                invariants: [],
                range: CopyRange {
                    start: 0,
                    end: 85,
                },
                name_range: CopyRange {
                    start: 6,
                    end: 11,
                },
            },
        ),
    ],
}
