phalcom-ast/tests/snapshots/integration__parser__multiple_statements.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"let x = 1\\nlet y = 2\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        Let(
            LetBinding {
                kind: Let,
                pattern: Name {
                    name: "x",
                    range: CopyRange {
                        start: 4,
                        end: 5,
                    },
                },
                value: Some(
                    Int {
                        digits: "1",
                        radix: 10,
                        range: CopyRange {
                            start: 8,
                            end: 9,
                        },
                    },
                ),
                range: CopyRange {
                    start: 0,
                    end: 9,
                },
            },
        ),
        Let(
            LetBinding {
                kind: Let,
                pattern: Name {
                    name: "y",
                    range: CopyRange {
                        start: 14,
                        end: 15,
                    },
                },
                value: Some(
                    Int {
                        digits: "2",
                        radix: 10,
                        range: CopyRange {
                            start: 18,
                            end: 19,
                        },
                    },
                ),
                range: CopyRange {
                    start: 10,
                    end: 19,
                },
            },
        ),
    ],
}
