phalcom-ast/tests/snapshots/integration__parser__multiple_statements_semicolon_separated.snap
---
source: phalcom-ast/tests/parser.rs
assertion_line: 129
expression: "parse(\"System.print(1); System.print(2)\")"
---
Program {
    statements: [
        Expr {
            expr: MethodCall(
                MethodCallExpr {
                    object: Var {
                        value: "System",
                        range: CopyRange {
                            start: 0,
                            end: 6,
                        },
                    },
                    method: "print",
                    method_range: Some(
                        CopyRange {
                            start: 7,
                            end: 12,
                        },
                    ),
                    args: [
                        Positional {
                            expr: Int {
                                digits: "1",
                                radix: 10,
                                range: CopyRange {
                                    start: 13,
                                    end: 14,
                                },
                            },
                            range: CopyRange {
                                start: 13,
                                end: 14,
                            },
                        },
                    ],
                    range: CopyRange {
                        start: 0,
                        end: 15,
                    },
                },
            ),
            range: CopyRange {
                start: 0,
                end: 15,
            },
        },
        Expr {
            expr: MethodCall(
                MethodCallExpr {
                    object: Var {
                        value: "System",
                        range: CopyRange {
                            start: 17,
                            end: 23,
                        },
                    },
                    method: "print",
                    method_range: Some(
                        CopyRange {
                            start: 24,
                            end: 29,
                        },
                    ),
                    args: [
                        Positional {
                            expr: Int {
                                digits: "2",
                                radix: 10,
                                range: CopyRange {
                                    start: 30,
                                    end: 31,
                                },
                            },
                            range: CopyRange {
                                start: 30,
                                end: 31,
                            },
                        },
                    ],
                    range: CopyRange {
                        start: 17,
                        end: 32,
                    },
                },
            ),
            range: CopyRange {
                start: 17,
                end: 32,
            },
        },
    ],
}
