phalcom-ast/tests/snapshots/integration__parser__postfix_call_preserves_unqualified_call.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"f(1, 2)\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        Expr {
            expr: UnqualifiedCall(
                UnqualifiedCallExpr {
                    name: "f",
                    name_range: Some(
                        CopyRange {
                            start: 0,
                            end: 1,
                        },
                    ),
                    args: [
                        Positional {
                            expr: Int {
                                digits: "1",
                                radix: 10,
                                range: CopyRange {
                                    start: 2,
                                    end: 3,
                                },
                            },
                            range: CopyRange {
                                start: 2,
                                end: 3,
                            },
                        },
                        Positional {
                            expr: Int {
                                digits: "2",
                                radix: 10,
                                range: CopyRange {
                                    start: 5,
                                    end: 6,
                                },
                            },
                            range: CopyRange {
                                start: 5,
                                end: 6,
                            },
                        },
                    ],
                    range: CopyRange {
                        start: 0,
                        end: 7,
                    },
                },
            ),
            range: CopyRange {
                start: 0,
                end: 7,
            },
        },
    ],
}
