phalcom-ast/tests/snapshots/integration__parser__recovers_across_multiple_broken_statements.snap
---
source: phalcom-ast/tests/parser.rs
expression: rendered
---
[
    "Expected one of identifier, \"(\", \"[\", \"_\" (at bytes 4..5)",
    "Expected one of \";\", newline (at bytes 13..14)",
    "Expected one of identifier, \"(\", \"[\", \"_\" (at bytes 19..20)",
]
