phalcom-ast/tests/snapshots/integration__parser__return_statement.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"return 1\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        Return(
            ReturnStatement {
                value: Some(
                    Int {
                        digits: "1",
                        radix: 10,
                        range: CopyRange {
                            start: 7,
                            end: 8,
                        },
                    },
                ),
                range: CopyRange {
                    start: 0,
                    end: 8,
                },
            },
        ),
    ],
}
