phalcom-ast/tests/snapshots/integration__parser__standalone_invariant_diverts_to_class_invariants.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"class Point {\\n  @invariant(x >= 0)\\n\\n  get() {\\n    return x\\n  }\\n}\\n\")"
---
Program {
    preamble: ModulePreamble {
        metadata: [],
        dependencies: [],
        range: CopyRange {
            start: 0,
            end: 0,
        },
    },
    statements: [
        Class(
            ClassDef {
                name: "Point",
                generic_parameters: [],
                superclass: None,
                where_clause: None,
                members: [
                    Method(
                        MethodDef {
                            name: "get",
                            generic_parameters: [],
                            params: [],
                            return_annotation: None,
                            where_clause: None,
                            body: Block(
                                [
                                    Return(
                                        ReturnStatement {
                                            value: Some(
                                                Var {
                                                    value: "x",
                                                    range: CopyRange {
                                                        start: 57,
                                                        end: 58,
                                                    },
                                                },
                                            ),
                                            range: CopyRange {
                                                start: 50,
                                                end: 58,
                                            },
                                        },
                                    ),
                                ],
                            ),
                            is_static: false,
                            is_constructor: false,
                            attributes: [],
                            range: CopyRange {
                                start: 38,
                                end: 62,
                            },
                            name_range: CopyRange {
                                start: 38,
                                end: 41,
                            },
                        },
                    ),
                ],
                attributes: [],
                invariants: [
                    (
                        Binary(
                            BinaryExpr {
                                op: GreaterThanOrEqual,
                                op_range: Some(
                                    CopyRange {
                                        start: 29,
                                        end: 31,
                                    },
                                ),
                                left: Var {
                                    value: "x",
                                    range: CopyRange {
                                        start: 27,
                                        end: 28,
                                    },
                                },
                                right: Int {
                                    digits: "0",
                                    radix: 10,
                                    range: CopyRange {
                                        start: 32,
                                        end: 33,
                                    },
                                },
                                range: CopyRange {
                                    start: 27,
                                    end: 33,
                                },
                            },
                        ),
                        CopyRange {
                            start: 16,
                            end: 34,
                        },
                    ),
                ],
                range: CopyRange {
                    start: 0,
                    end: 64,
                },
                name_range: CopyRange {
                    start: 6,
                    end: 11,
                },
            },
        ),
    ],
}
